Adiciona versão final de modelagem organizacional
Co-authored-by: gabrielfreitass1 <gabriel.fbalbino@gmail.com>
Co-authored-by: JoseFilipi <filipiffunb@gmail.com>

--- a/docs/Modelagem/2.3.1.DiagramaDePacotes.md
+++ b/docs/Modelagem/2.3.1.DiagramaDePacotes.md
@@ -2,12 +2,11 @@
 
 ## Introdução
 
-O diagrama de pacotes é um diagrama da estrutura que apresente a vizualização do sistema projetado ao nível de Empacotamentos(pacotes).O diagrama de pacotes é ideal para organizar e estruturar modelos de projetos de média a grande escala. Pode-se dizer que um pacote é um campo da estrutura para seus membros, que compreende os elementos associados, os quais podem ser contidos ou importados. Além disso, a definição de pacote pode ser estendida ao conteúdo de outros pacotes por meio da união dos elementos.Os pacotes estabelecem uma relação de hierarquia estrutural, onde pacotes de nível superior podem ser divididos em subpacotes e assim sucessivamente.
+O diagrama de pacotes é um diagrama da estrutura que apresenta a visualização do sistema projetado ao nível de empacotamentos (pacotes). O diagrama de pacotes é ideal para organizar e estruturar modelos de projetos de média a grande escala. Pode-se dizer que um pacote é um campo da estrutura para seus membros, que compreende os elementos associados, os quais podem ser contidos ou importados. Além disso, a definição de pacote pode ser estendida ao conteúdo de outros pacotes por meio da união dos elementos. Os pacotes estabelecem uma relação de hierarquia estrutural, onde pacotes de nível superior podem ser divididos em subpacotes e assim sucessivamente. 
 
 
 ## Metodologia
-A partir do desenvolvimento do diagrama de classes e os requisitos levantados, os alunos [Amanda](https://github.com/acamposs), [Gabriel](https://github.com/gabrielfreitass1), [José Filipi](https://github.com/JoseFilipi), [Magno](https://github.com/magnluiz), [Raphael](https://github.com/Raphides) e [Yves](https://github.com/Yvestxt) elaboraram os primeiros prototipos individualmente e a partir deles foi feito um novo Diagrama feito por [Gabriel](https://github.com/gabrielfreitass1), [Henrique](https://github.com/HeBatalha), [José Filipi](https://github.com/JoseFilipi) e [Raphael](https://github.com/Raphides) em grupo. Foram Utilizadas como ferramentas para elaboração do diagrama de pacotes o PlantUML e o Draw.io.
-
+A partir do desenvolvimento do diagrama de classes e os requisitos levantados, os alunos [Amanda](https://github.com/acamposs), [Gabriel](https://github.com/gabrielfreitass1), [José Filipi](https://github.com/JoseFilipi), [Magno](https://github.com/magnluiz), [Raphael](https://github.com/Raphides), [Yves](https://github.com/Yvestxt) e [Vinícius Brito](https://github.com/vini051) elaboraram os primeiros prototipos individualmente e a partir deles foi feito um novo Diagrama feito por [Gabriel](https://github.com/gabrielfreitass1), [Henrique](https://github.com/HeBatalha), [José Filipi](https://github.com/JoseFilipi), [Raphael](https://github.com/Raphides) em grupo. Foram Utilizadas como ferramentas para elaboração do diagrama de pacotes o PlantUML e o Draw.io.
 
 ## Diagramas de Pacotes
 <div align="center">
@@ -15,7 +14,7 @@ A partir do desenvolvimento do diagrama de classes e os requisitos levantados, o
 
 ![Figura1](https://cdn.discordapp.com/attachments/1305500218804011059/1311127217874403358/Amanda_Campos_DiagramaDePacotes.png?ex=6749b420&is=674862a0&hm=8f75d1c81529b2f745e694c1dae7ec8839194647512cacda5d7558c5bf16b647&)
 
-<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/TheCarlosRamos">Amanda Alves Campos</a>, 2024.</p></font> 
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/acamposs">Amanda Alves Campos</a>, 2024.</p></font> 
 </div>
 
 <div align="center">
@@ -23,7 +22,7 @@ A partir do desenvolvimento do diagrama de classes e os requisitos levantados, o
 
 ![Figura2](https://cdn.discordapp.com/attachments/1305500218804011059/1311127218277060628/Gabriel_DiagramaDePacotes.drawio.png?ex=6749b420&is=674862a0&hm=10b1d74ded64f3dff8dc4ec9d83a31906f7813de2aa484f43969394ead2007ab&)
 
-<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/HeBatalha">Gabriel Freitas Balbino</a>, 2024.</p></font> 
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/gabrielfreitass1">Gabriel Freitas Balbino</a>, 2024.</p></font> 
 </div>
 
 <div align="center">
@@ -31,7 +30,7 @@ A partir do desenvolvimento do diagrama de classes e os requisitos levantados, o
 
 ![Figura3](https://cdn.discordapp.com/attachments/1305500218804011059/1311127218620989460/Jose_Souza_Diagrama_de_Pacotes.png?ex=6749b420&is=674862a0&hm=50ad73bc19b2779781d066bc098e3073d43406d9f0bc5b979386a8d6991efb4f&)
 
-<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/IsaqueSH">José Filipi Brito Souza</a>, 2024.</p></font> 
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/JoseFilipi">José Filipi Brito Souza</a>, 2024.</p></font> 
 </div>
 
 <div align="center">
@@ -39,7 +38,7 @@ A partir do desenvolvimento do diagrama de classes e os requisitos levantados, o
 
 ![Figura4](https://cdn.discordapp.com/attachments/1305500218804011059/1311127218977636453/Magno_DiagramaDePacotes.png?ex=6749b420&is=674862a0&hm=c1d1000bcb3f88576182ec29749bc0909af602b5c30adadd597751a9555484d2&)
 
-<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/joaopedrodasilvarodrigues">Magno Luiz Vale Vieira</a>, 2024.</p></font> 
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/magnluiz">Magno Luiz Vale Vieira</a>, 2024.</p></font> 
 </div>
 
 <div align="center">
@@ -48,21 +47,29 @@ A partir do desenvolvimento do diagrama de classes e os requisitos levantados, o
 ![Figura5](https://cdn.discordapp.com/attachments/1305500218804011059/1311127220055445674/Raphael_DiagramaDePacotes.png?ex=6749b420&is=674862a0&hm=e15377a1cf3c28bcbf8ba8eee30a05d730a83db0e5461cf51edff5661f7fa9d0&)
 
 
-<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/Rodrigomfab88">Raphael Mendes da Silva</a>, 2024.</p></font> 
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/Raphides">Raphael Mendes da Silva</a>, 2024.</p></font> 
 </div>
 
 <div align="center">
-<font size="3"><p style="text-align: center"><b>Figura 5:</b> Diagrama de Pacotes Yves</p></font>
+<font size="3"><p style="text-align: center"><b>Figura 6:</b> Diagrama de Pacotes Yves</p></font>
 
-![Figura5](https://cdn.discordapp.com/attachments/1305500218804011059/1311127219682279565/Yves_DiagramaDePacotes.png?ex=6749b420&is=674862a0&hm=4d4d109f8678d9281bb9e1096118bd37da3605fcba6383c2f6a7a700fb70c53a&)
+![Figura6](https://cdn.discordapp.com/attachments/1305500218804011059/1311127219682279565/Yves_DiagramaDePacotes.png?ex=6749b420&is=674862a0&hm=4d4d109f8678d9281bb9e1096118bd37da3605fcba6383c2f6a7a700fb70c53a&)
 
 
-<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/Rodrigomfab88">Yves Gustavo Ribeiro Pimenta</a>, 2024.</p></font> 
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/Yvestxt">Yves Gustavo Ribeiro Pimenta</a>, 2024.</p></font> 
+</div>
+
+<div align="center">
+<font size="3"><p style="text-align: center"><b>Figura 7:</b> Diagrama de Pacotes Vinícius</p></font>
+
+![Figura7](https://media.discordapp.net/attachments/1302042776526917652/1311849322081419354/Vinicius_Brito_DiagramaDePacotes.png?ex=674a5a63&is=674908e3&hm=9f88c7c41e44f92c2237a5f8630c17dd7c270678d1acd4e84338000bf79ec43c&=&format=webp&quality=lossless)
+
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/vini051">Vinícius Brito</a>, 2024.</p></font> 
 </div>
 
 ## Análise e Resultado
 
-Os diagramas de Casos de Pacotes criados individualmente pelos integrantes do grupo nos proporcionaram diferentes pespectivas em relação ao funcionamento do sistema, isso tudo foi levado em consideração na elaboração do diagrama final de Casos de Uso.
+Os diagramas de Casos de Pacotes criados individualmente pelos integrantes do grupo nos proporcionaram diferentes pespectivas em relação ao funcionamento do sistema, isso tudo foi levado em consideração na elaboração do diagrama final de Pacotes.
 
 ## Referência Bibliográfica
 > FAG. IMPORTÂNCIA DO DIAGRAMA DE PACOTES PARA O DESENVOLVIMENTO
@@ -78,4 +85,5 @@ Renata Hansen Silva, Elaine de Oliveira Zanini. Disponível em: https://www4.fag
 ## Histórico de Versão
 | Versão | Data       | Descrição                                      | Autor               | Revisor               |
 |--------|------------|------------------------------------------------|---------------------|-----------------------|
-| 1.0    | 28/11/2024 | Primeira versão dos Diagramas de Pacotes| [Gabriel Freitas](https://github.com/gabrielfreitass1) <br> [Henrique Batalha](https://github.com/HeBatalha) <br> [José Filipi](https://github.com/JoseFilipi) | [Raphael](https://github.com/Raphides) |
+| 1.0    | 28/11/2024 | Primeira versão dos Diagramas de Pacotes | [Gabriel Freitas](https://github.com/gabrielfreitass1) <br> [Henrique Batalha](https://github.com/HeBatalha) <br> [José Filipi](https://github.com/JoseFilipi) | [Raphael](https://github.com/Raphides) |
+| 1.1    | 28/11/2024 | Revisão ortográfica e adiciona diagrama individual Vinícius | [Gabriel Freitas](https://github.com/gabrielfreitass1) <br> [Henrique Batalha](https://github.com/HeBatalha) <br> [José Filipi](https://github.com/JoseFilipi) | [Raphael](https://github.com/Raphides) |
