--- a/docs/Modelagem/2.3.2.DiagramaDeCasosDeUso.md
+++ b/docs/Modelagem/2.3.2.DiagramaDeCasosDeUso.md
@@ -7,6 +7,18 @@ Casos de uso são essenciais na modelagem de sistemas, servindo como uma ferrame
 ## Metodologia
 A partir dos requisitos levantados, os alunos [Carlos](https://github.com/TheCarlosRamos), [Henrique](https://github.com/HeBatalha), [Isaque](https://github.com/IsaqueSH), [João Pedro](https://github.com/joaopedrodasilvarodrigues) e [Rodrigo](https://github.com/Rodrigomfab88) elaboraram os primeiros prototipos e a partir deles foi feito um novo Diagrama feito por [Gabriel](https://github.com/gabrielfreitass1), [Henrique](https://github.com/HeBatalha), [José Filipi](https://github.com/JoseFilipi) e [Raphael](https://github.com/Raphides) em grupo. Foram Utilizadas diversas ferramentas utilizadas para a elaboração dos diagramas entre eles o PlantUML, Draw.io e Lucidchart.
 
+### Legenda
+<p align="center" > <font><strong>Tabela 1:</strong> Legenda do diagrama de casos de uso</font> <br></p>
+
+|Elemento|Nome|Função|
+|:--:|:--:|:--:|
+|<img src="https://media.discordapp.net/attachments/1305500218804011059/1311854845245788180/ator.png?ex=674a5f88&is=67490e08&hm=183a0a9e1624c21d05b1cf501dd4df9b0677678c4b1f2bf5fe0bdcccf806d3e1&=&format=webp&quality=lossless" alt="Ator" width="100px">|Ator|Usuário do sistema, ou melhor, um tipo de usuário.|
+|<img src="https://media.discordapp.net/attachments/1305500218804011059/1311855130479693834/elipse.png?ex=674a5fcc&is=67490e4c&hm=6c230e15c46f58095c7cd6cf986968340739c325a706f284dc626e43269d34b5&=&format=webp&quality=lossless" alt="Caso de uso" width="100px">|Elipse (Caso de uso)|É uma tarefa ou uma funcionalidade realizada pelo ator.|
+|<img src="https://media.discordapp.net/attachments/1305500218804011059/1311855384126033950/retangulo.png?ex=674a6008&is=67490e88&hm=46b2a37f137f5e86d4de880d2e8ae0c55aeb3f03a5c85bdbe3403f2d6923c0be&=&format=webp&quality=lossless" alt="Sistema" width="100px">|Retângulo (Sistema)|Usado para representar o sistema ou o bloco em análise. Ele envolve os casos de uso e atores relacionados.|
+|<img src="https://media.discordapp.net/attachments/1305500218804011059/1311855734069133374/setas.png?ex=674a605c&is=67490edc&hm=67c1d092a5812afd1dc1dc687486fbbe68739a47d5943cf374bbb58fe9b3a12d&=&format=webp&quality=lossless" alt="Relação" width="100px">|Flecha (Relação)|As flechas são usadas para representar as relações ou interações entre atores e casos de uso.|
+
+<font size="3"><p style="text-align: center">Autor: [José Filipi](https://github.com/JoseFilipi), 2024</p></font>
+
 
 ## Diagramas de Casos de Uso
 
@@ -66,5 +78,5 @@ Casos de Uso. Professora Dra. Elisa Yumi Nakagawa. Disponível em: https://edisc
 | Versão | Data       | Descrição                                      | Autor               | Revisor               |
 |--------|------------|------------------------------------------------|---------------------|-----------------------|
 | 1.0    | 27/11/2024 | Primeira versão dos Casos de Uso| [Gabriel Freitas](https://github.com/gabrielfreitass1) <br> [Henrique Batalha](https://github.com/HeBatalha) <br> [José Filipi](https://github.com/JoseFilipi) | [Raphael](https://github.com/Raphides) |
-| 1.1    | 28/11/2024 | Atualização das imagens e Referencias Bibliograficas| [Gabriel Freitas](https://github.com/gabrielfreitass1)|  |
+| 1.1    | 28/11/2024 | Atualização das imagens e Referências Bibliograficas| [Gabriel Freitas](https://github.com/gabrielfreitass1)|  |
 
