--- a/docs/Modelagem/2.3.ModelagemOrganizacionalCasosDeUso.md
+++ b/docs/Modelagem/2.3.ModelagemOrganizacionalCasosDeUso.md
@@ -1,29 +1,45 @@
-# 2.3. Módulo Notação UML – Modelagem Organizacional OU Casos de Uso
+# 2.3. Módulo Notação UML – Modelagem Organizacional
 
 ## Introdução
-Este documento descreve a modelagem UML organizacional ou de casos de uso para o projeto Tsirko, conforme especificado na entrega 02 da disciplina Arquitetura de Software.
-
-### Foco 3: Modelagem Organizacional OU Casos de Uso
-- **Entrega Mínima:** Um modelo, podendo ser um Diagrama de Pacotes ou um Diagrama de Casos de Uso.
-
-### Apresentação
-- **Requisitos da Apresentação:**
-    - Explicação do modelo especificado.
-    - Clareza sobre a participação dos membros (mostrar quadro de participações e commits).
-    - Justificativas e senso crítico sobre o modelo.
-    - Comentários gerais sobre o trabalho em equipe.
-    - **Tempo:** Aproximadamente 5 minutos.
-    - **Recomendação:** Apresentar via Wiki ou GitPages do projeto, com conteúdos baixados previamente para evitar problemas de internet.
+Este documento descreve a modelagem UML organizacional para o projeto Tsirko, conforme especificado na entrega 02 da disciplina Arquitetura de Software.
 
 ## Metodologia
+Após a entrega dos artefatos individuais, os grupos foram separados de acordo com cada tipo de modelagem. Por meio de reuniões, com uma apresentação individual de cada grupo ao time responsável pela elaboração dos artefatos finais, composto por [Gabriel Freitas](https://github.com/gabrielfreitass1), [Henrique Batalha](https://github.com/HeBatalha), [José Filipi](https://github.com/JoseFilipi) e [Raphael Mendes](https://github.com/Raphides), foi realizada uma seleção dos melhores trabalhos realizados, com base nos seguintes critérios: uso adequado da notação UML, cobertura de requisitos e proximidade com a solução final, conforme o diagrama de classes. 
+
+Foram encontradas algumas dificuldades na realização do trabalho final em grupo, como a divisão no sistema de pacotes, a falta de conhecimento mais profundo da notação e, principalmente, a disponibilidade para marcar as reuniões necessárias para o desenvolvimento do diagrama definitivo.
 
 ## Diagrama de Pacotes
 
+<div align="center">
+<font size="3"><p style="text-align: center"><b>Figura 1:</b> Diagrama de Pacotes - Versão Final</p></font>
+
+![Diagrama de Pacotes](https://media.discordapp.net/attachments/1302042776526917652/1311848623310372935/pacotes_tsirko.drawio.png?ex=674a59bc&is=6749083c&hm=1b3060c470c163e86e8294f07e32a74fcb21332e00ac0f7bbfff8bda980d0044&=&format=webp&quality=lossless&width=835&height=1275)
+
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/HeBatalha">Henrique Batalha</a>, <a href="https://github.com/gabrielfreitass1">Gabriel Freitas</a>, <a href="https://github.com/JoseFilipi">José Filipi</a>, <a href="https://github.com/Raphides">Raphael Mendes</a>, <a href="https://github.com/vini051">Vinícius Brito</a>, 2024.</p></font> 
+</div>
+
 ## Diagrama de Casos de Uso
 
+<div align="center">
+<font size="3"><p style="text-align: center"><b>Figura 2:</b> Diagrama de Casos de Uso - Versão Final </p></font>
+
+![Casos de Uso](https://media.discordapp.net/attachments/1302042776526917652/1311849364964118580/diagramasUserCases.drawio.png?ex=674a5a6d&is=674908ed&hm=e13e293c5b63cb3eff74848a23b55561c07c459e295c6ac4282a2480160da8b2&=&format=webp&quality=lossless&width=852&height=975)
+
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/HeBatalha">Henrique Batalha</a>, <a href="https://github.com/gabrielfreitass1">Gabriel Freitas</a>, <a href="https://github.com/JoseFilipi">José Filipi</a>, <a href="https://github.com/IsaqueSH">Isaque Santos</a>, 2024.</p></font> 
+</div>
+
 ## Análise e Resultado
+Para a criação do diagrama final de Pacotes foi considerado os seguinte aspectos de cada autor selecionado:
+
+- [Gabriel Freitas](https://github.com/gabrielfreitass1) & [Raphael Mendes](https://github.com/Raphides): Divisão dos diretórios em camada de UI, regras de negócio e base de dados.
+- [Vinicius Brito](https://github.com/vini051): Utilização de esquemática de dependências dos diretórios.
+
+Para a criação do diagrama final de Casos de Uso foi considerado os seguinte aspectos de cada autor selecionado:
+
+- [Henrique Batalha](https://github.com/HeBatalha): Enumeração dos casos de uso, casos uso relacionados a Mapa e Wiki.
+- [Isaque Santos](https://github.com/IsaqueSH): Estrutura geral do diagrama e divisão dos atores.
 
 ## Histórico de Versão
 | Versão | Data       | Descrição                                      | Autor               | Revisor               |
 |--------|------------|------------------------------------------------|---------------------|-----------------------|
-| 1.0    | 23/11/2024 | Primeira versão do artefato | [Amanda Campos](https://github.com/acamposs) | [Autor](https://github.com/autor) |
+| 1.0    | 28/11/2024 | Primeira versão do artefato | [Gabriel Freitas](https://github.com/gabrielfreitass1) <br> [Henrique Batalha](https://github.com/HeBatalha) <br> [José Filipi](https://github.com/JoseFilipi) | [Raphael Mendes](https://github.com/Raphides) <br> [Yves](https://github.com/Yvestxt) |
