--- a/docs/Modelagem/2.5.IniciativasExtras.md
+++ b/docs/Modelagem/2.5.IniciativasExtras.md
@@ -32,3 +32,8 @@ Cada sublíder assumiu a responsabilidade de:
 - Coordenar as tarefas da subequipe.
 - Assegurar que os objetivos da área fossem atingidos dentro do prazo.
 - Estimular a participação dos membros e resolver dúvidas técnicas ou organizacionais.
+
+## Histórico de Versão
+| Versão | Data       | Descrição                                      | Autor               | Revisor               |
+|--------|------------|------------------------------------------------|---------------------|-----------------------|
+| 1.0    | 23/11/2024 | Cronograma e Tabela de equipe | [Yves Pimenta](https://github.com/Yvestxt) | [Autor](https://github.com/Yvestxt) |
