--- a/docs/Modelagem/2.3.2.DiagramaDeCasosDeUso.md
+++ b/docs/Modelagem/2.3.2.DiagramaDeCasosDeUso.md
@@ -17,7 +17,7 @@ A partir dos requisitos levantados, os alunos [Carlos](https://github.com/TheCar
 |<img src="https://media.discordapp.net/attachments/1305500218804011059/1311855384126033950/retangulo.png?ex=674a6008&is=67490e88&hm=46b2a37f137f5e86d4de880d2e8ae0c55aeb3f03a5c85bdbe3403f2d6923c0be&=&format=webp&quality=lossless" alt="Sistema" width="100px">|Retângulo (Sistema)|Usado para representar o sistema ou o bloco em análise. Ele envolve os casos de uso e atores relacionados.|
 |<img src="https://media.discordapp.net/attachments/1305500218804011059/1311855734069133374/setas.png?ex=674a605c&is=67490edc&hm=67c1d092a5812afd1dc1dc687486fbbe68739a47d5943cf374bbb58fe9b3a12d&=&format=webp&quality=lossless" alt="Relação" width="100px">|Flecha (Relação)|As flechas são usadas para representar as relações ou interações entre atores e casos de uso.|
 
-<font size="3"><p style="text-align: center">Autor: [José Filipi](https://github.com/JoseFilipi), 2024</p></font>
+<font size="3"><p style="text-align: center">Autor: [José Filipi](https://github.com/JoseFilipi)</p></font>
 
 
 ## Diagramas de Casos de Uso
@@ -25,42 +25,41 @@ A partir dos requisitos levantados, os alunos [Carlos](https://github.com/TheCar
 <div align="center">
 <font size="3"><p style="text-align: center"><b>Figura 1:</b> Diagrama Casos de Uso Carlos Gabriel Ramos</p></font>
 
-![Figura1](https://media.discordapp.net/attachments/1305500218804011059/1311128106886627328/Carlos_Gabriel_DiagramaDeCasosDeUso.png?ex=67490c34&is=6747bab4&hm=070e7b371b75e7c2112deff5612ab4b9de8d60a454e11c3cc3e71f241fc21631&=&format=webp&quality=lossless&width=1112&height=676)
-
-<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/TheCarlosRamos">Carlos Gabriel Ramos</a>, 2024.</p></font> 
+![Figura1](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Carlos_Gabriel_DiagramaDeCasosDeUso.png)
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/TheCarlosRamos">Carlos Gabriel Ramos</a></p></font> 
 </div>
 
 <div align="center">
 <font size="3"><p style="text-align: center"><b>Figura 2:</b> Diagrama Casos de Uso Henrique Batalha</p></font>
 
-![Figura2](https://cdn.discordapp.com/attachments/1305500218804011059/1311534438701731870/image.png?ex=67493521&is=6747e3a1&hm=de4ed4d01b6938b03e8b7cdf02de5993d4690bde43e998c031534223ce3d2d95&)
+![Figura2](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Henrique_Batalha_DiagramaDeCasosDeUso.png)
 
-<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/HeBatalha">Henrique Batalha</a>, 2024.</p></font> 
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/HeBatalha">Henrique Batalha</a></p></font> 
 </div>
 
 <div align="center">
 <font size="3"><p style="text-align: center"><b>Figura 3:</b> Diagrama Casos de Uso Isaque Santos</p></font>
 
-![Figura3](https://media.discordapp.net/attachments/1305500218804011059/1311128107209592954/Isaque_Santos_DiagramaCasosdeUso.png?ex=67490c34&is=6747bab4&hm=6d57177c27230c0b1703844c658fbd715505209b741d8b127299828f02973655&=&format=webp&quality=lossless&width=708&height=676)
+![Figura3](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Isaque_Santos_DiagramaCasosdeUso.png)
 
-<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/IsaqueSH">Isaque Santos</a>, 2024.</p></font> 
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/IsaqueSH">Isaque Santos</a></p></font> 
 </div>
 
 <div align="center">
 <font size="3"><p style="text-align: center"><b>Figura 4:</b> Diagrama Casos de Uso João Pedro da Silva</p></font>
 
-![Figura4](https://cdn.discordapp.com/attachments/1305500218804011059/1311128107465576448/Joao_Pedro_DiagramaDeCasosDeUso.png?ex=67490c34&is=6747bab4&hm=e3076ef84fee3e1457260414b78ede368b008081c3b46fe16cdbfc272130ace5&)
+![Figura4](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Joao_Pedro_DiagramaDeCasosDeUso.png)
 
-<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/joaopedrodasilvarodrigues">João Pedro da Silva</a>, 2024.</p></font> 
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/joaopedrodasilvarodrigues">João Pedro da Silva</a></p></font> 
 </div>
 
 <div align="center">
 <font size="3"><p style="text-align: center"><b>Figura 5:</b> Diagrama Casos de Uso Rodrigo Mattos de Figueredo</p></font>
 
-![Figura5](https://media.discordapp.net/attachments/1305500218804011059/1311128106551214100/Rodrigo_DiagramaDeCasosDeUso.png?ex=67490c34&is=6747bab4&hm=49dbc58108a2080eb5d1e77ef06edfa0409e3de24fc657048ca49239a56a102a&=&format=webp&quality=lossless&width=1440&height=247)
+![Figura5](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Rodrigo_DiagramaDeCasosDeUso.png)
 
 
-<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/Rodrigomfab88">Rodrigo Mattos de Figueredo</a>, 2024.</p></font> 
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/Rodrigomfab88">Rodrigo Mattos de Figueredo</a></p></font> 
 </div>
 
 ## Análise e Resultado
@@ -78,5 +77,5 @@ Casos de Uso. Professora Dra. Elisa Yumi Nakagawa. Disponível em: https://edisc
 | Versão | Data       | Descrição                                      | Autor               | Revisor               |
 |--------|------------|------------------------------------------------|---------------------|-----------------------|
 | 1.0    | 27/11/2024 | Primeira versão dos Casos de Uso| [Gabriel Freitas](https://github.com/gabrielfreitass1) <br> [Henrique Batalha](https://github.com/HeBatalha) <br> [José Filipi](https://github.com/JoseFilipi) | [Raphael](https://github.com/Raphides) |
-| 1.1    | 28/11/2024 | Atualização das imagens e Referências Bibliograficas| [Gabriel Freitas](https://github.com/gabrielfreitass1)|  |
+| 1.1    | 28/11/2024 | Atualização das imagens e Referências Bibliograficas| [Gabriel Freitas](https://github.com/gabrielfreitass1)| [Yves Pimenta](https://github.com/Yvestxt) |
 
