--- a/docs/Modelagem/2.3.2.DiagramaDeCasosDeUso.md
+++ b/docs/Modelagem/2.3.2.DiagramaDeCasosDeUso.md
@@ -25,14 +25,14 @@ A partir dos requisitos levantados, os alunos [Carlos](https://github.com/TheCar
 <div align="center">
 <font size="3"><p style="text-align: center"><b>Figura 1:</b> Diagrama Casos de Uso Carlos Gabriel Ramos</p></font>
 
-![Figura1](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Carlos_Gabriel_DiagramaDeCasosDeUso.png)
+![Figura1](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/Carlos_Gabriel_DiagramaDeCasosDeUso.png)
 <font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/TheCarlosRamos">Carlos Gabriel Ramos</a></p></font> 
 </div>
 
 <div align="center">
 <font size="3"><p style="text-align: center"><b>Figura 2:</b> Diagrama Casos de Uso Henrique Batalha</p></font>
 
-![Figura2](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Henrique_Batalha_DiagramaDeCasosDeUso.png)
+![Figura2](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/Henrique_Batalha_DiagramaDeCasosDeUso.png)
 
 <font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/HeBatalha">Henrique Batalha</a></p></font> 
 </div>
@@ -40,7 +40,7 @@ A partir dos requisitos levantados, os alunos [Carlos](https://github.com/TheCar
 <div align="center">
 <font size="3"><p style="text-align: center"><b>Figura 3:</b> Diagrama Casos de Uso Isaque Santos</p></font>
 
-![Figura3](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Isaque_Santos_DiagramaCasosdeUso.png)
+![Figura3](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/Isaque_Santos_DiagramaCasosdeUso.png)
 
 <font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/IsaqueSH">Isaque Santos</a></p></font> 
 </div>
@@ -48,7 +48,7 @@ A partir dos requisitos levantados, os alunos [Carlos](https://github.com/TheCar
 <div align="center">
 <font size="3"><p style="text-align: center"><b>Figura 4:</b> Diagrama Casos de Uso João Pedro da Silva</p></font>
 
-![Figura4](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Joao_Pedro_DiagramaDeCasosDeUso.png)
+![Figura4](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/Joao_Pedro_DiagramaDeCasosDeUso.png)
 
 <font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/joaopedrodasilvarodrigues">João Pedro da Silva</a></p></font> 
 </div>
@@ -56,7 +56,7 @@ A partir dos requisitos levantados, os alunos [Carlos](https://github.com/TheCar
 <div align="center">
 <font size="3"><p style="text-align: center"><b>Figura 5:</b> Diagrama Casos de Uso Rodrigo Mattos de Figueredo</p></font>
 
-![Figura5](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/main/docs/assets/Rodrigo_DiagramaDeCasosDeUso.png)
+![Figura5](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/Rodrigo_DiagramaDeCasosDeUso.png)
 
 
 <font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/Rodrigomfab88">Rodrigo Mattos de Figueredo</a></p></font> 
