--- a/docs/Modelagem/2.5.IniciativasExtras.md
+++ b/docs/Modelagem/2.5.IniciativasExtras.md
@@ -7,7 +7,7 @@
 O cronograma busca organizar o trabalho da equipe, dividida em um líder, três sublíderes e nove membros, para concluir a produção de diagramas UML dentro de um prazo de 19 dias, com entrega final em 29/11/2024. O plano foi estruturado em três sprints principais, cada uma com objetivos claros e etapas definidas para garantir uma execução eficiente e colaborativa.
 <div align="center">
   
-  ![Cronograma](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/extras/docs/imagens/Cronograma.jpg)
+  ![Cronograma](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/refs/heads/main/docs/assets/Cronograma.jpg)
 
   <font size="3"><p style="text-align: center"><b>Autor:</b> 
   <a href="https://github.com/Yvestxt">Yves Pimenta</a>
@@ -20,7 +20,7 @@ Para garantir uma organização eficiente e promover uma melhor comunicação, a
 
 <div align="center">
   
-  ![Cronograma](https://github.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/blob/extras/docs/imagens/Equipes.jpg)
+  ![Cronograma](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/refs/heads/main/docs/assets/Equipes.jpg)
 
   <font size="3"><p style="text-align: center"><b>Autor:</b> 
   <a href="https://github.com/Yvestxt">Yves Pimenta</a>
