adiciona diagramas individuais em `2.1.2DiagramaDeComponentes.md`

--- a/docs/Modelagem/2.1.2.DiagramaDeComponentes.md
+++ b/docs/Modelagem/2.1.2.DiagramaDeComponentes.md
@@ -2,13 +2,83 @@
 
 ## Introdução
 
+O diagrama de componentes é uma ferramenta essencial para representar a estrutura de alto nível do software Tsírko. Este diagrama ilustra os módulos fundamentais do sistema, suas interfaces e as relações entre eles, proporcionando uma visão clara da organização do software. A decomposição do sistema em unidades funcionais independentes facilita a compreensão da arquitetura geral, auxilia na identificação de dependências entre módulos e fornece uma base sólida para decisões de desenho e implementação.
+
 ## Metodologia
+
+Para criar o diagrama de componentes do Tsírko, nós, [Gabriel](https://github.com/gabrielfreitass1), [João](https://github.com/joaopedrodasilvarodrigues), [Raphael](https://github.com/Raphides) e [Magno](https://github.com/magnluiz), analisamos os requisitos do projeto e a arquitetura proposta. Utilizando as ferramentas draw.io e PlantUML, identificamos os módulos fundamentais do sistema e suas interfaces. Representamos graficamente os componentes, estabelecendo suas relações e dependências. Por fim, cada um de nós fez sua própria versão do diagrama, para que fosse possível consolidar as ideias de todos na versão final.
 
 ## Diagramas de Componentes
 
+<div align="center">
+<font size="3"><p style="text-align: center"><b>Figura 1:</b> Diagrama de Componente - Gabriel Freitas </p></font>
+
+![ Diagrama de Componente - Gabriel Freitas](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/Gabriel_DiagramaDeComponentes.drawio.png)
+
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/gabrielfreitass1">Gabriel Freitas</a>, 2024.</p></font>
+
+</div>
+
+---
+
+<div align="center">
+<font size="3"><p style="text-align: center"><b>Figura 2:</b>  Diagrama de Componente - João Pedro </p></font>
+
+![ Diagrama de Componente - João Pedro](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/Joao_Pedro_DiagramaDeComponentes_Revisado.png)
+
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/joaopedrodasilvarodrigues">João Pedro</a>, 2024.</p></font>
+
+</div>
+
+---
+
+<div align="center">
+<font size="3"><p style="text-align: center"><b>Figura 3:</b>  Diagrama de Componente - Raphael Mendes </p></font>
+
+![ Diagrama de Componente - Raphael Mendes](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/Raphael_DiagramaDeComponentes.png)
+
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/Raphides">Raphael Mendes</a>, 2024.</p></font>
+
+</div>
+
+---
+
+<div align="center">
+<font size="3"><p style="text-align: center"><b>Figura 3:</b>  Diagrama de Componente - Magno Luiz </p></font>
+
+![ Diagrama de Componente - Magno Luiz](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/Magno_DiagramaDeComponentes.png)
+
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/magnluiz">Magno Luiz</a>, 2024.</p></font>
+
+</div>
+
 ## Análise e Resultado
 
+A análise dos diagramas de componentes apresentados revela a estrutura arquitetural do sistema Tsírko, demonstrando como os diferentes módulos se organizam e se relacionam. Os diagramas mostram uma separação clara de responsabilidades e interfaces de comunicação entre os componentes.
+
+O diagrama do [Magno](https://github.com/magnluiz) ilustra uma arquitetura em camadas, onde o Frontend comunica com o Backend através de interfaces bem definidas. O Frontend é composto por nove componentes UI distintos, cada um com uma responsabilidade específica, desde votação até venda de ingressos. O Backend oferece cinco serviços principais que gerenciam dados, notificações, mapas, agenda e pagamentos, todos conectados a um banco de dados estruturado.
+
+O diagrama do [Gabriel](https://github.com/gabrielfreitass1) apresenta três subsistemas principais:
+
+- Gerenciamento de Contas: Controla acessos de espectadores/alunos e circos/professores
+- Gerenciamento de Eventos: Administra espetáculos, aulas e ingressos
+- Gerenciamento de Pagamentos: Processa transações financeiras
+
+O diagrama do [João](https://github.com/joaopedrodasilvarodrigues) mostra uma estrutura mais complexa com múltiplos subsistemas interconectados:
+
+- Gerenciamento de Animais: Integra controle, treinamento e relatórios de saúde
+- Warehouse: Gerencia inventário
+- Gerenciamento de Artistas: Controla cadastros e avaliações
+
+O diagrama do [Raphael](https://github.com/Raphides) apresenta uma estrutura focada na experiência do usuário, incluindo:
+
+- Sistema de busca e autenticação
+- Carrinho de compras
+- Integração com contas de circos e espectadores
+- Sistema de pagamentos
+
 ## Histórico de Versão
-| Versão | Data       | Descrição                                      | Autor               | Revisor               |
-|--------|------------|------------------------------------------------|---------------------|-----------------------|
-| 1.0    | 23/11/2024 | Primeira versão do artefato | [Amanda Campos](https://github.com/acamposs) | [Autor](https://github.com/autor) |
+
+| Versão | Data       | Descrição                   | Autor                                        | Revisor                           |
+| ------ | ---------- | --------------------------- | -------------------------------------------- | --------------------------------- |
+| 1.0    | 28/11/2024 | Primeira versão do artefato | [Vinícius Brito](https://github.com/vini051) | [Autor](https://github.com/autor) |
