--- a/docs/Modelagem/2.5.IniciativasExtras.md
+++ b/docs/Modelagem/2.5.IniciativasExtras.md
@@ -20,7 +20,7 @@ Para garantir uma organização eficiente e promover uma melhor comunicação, a
 
 <div align="center">
   
-  ![Cronograma](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/refs/heads/main/docs/assets/Equipes.jpg)
+  ![Equipes](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/refs/heads/main/docs/assets/Equipes.jpg)
 
   <font size="3"><p style="text-align: center"><b>Autor:</b> 
   <a href="https://github.com/Yvestxt">Yves Pimenta</a>
