--- a/docs/Modelagem/2.5.IniciativasExtras.md
+++ b/docs/Modelagem/2.5.IniciativasExtras.md
@@ -1,17 +1,19 @@
 # 2.5. Iniciativas Extras (Modelagem)
 
-#### Nesta seção, apresentamos iniciativas que complementam o projeto e visam aprimorar a colaboração e a transparência entre os membros da equipe. Cada uma dessas iniciativas contribui para a organização e o acompanhamento do nosso progresso. A seguir, descrevemos cada uma delas:
+## Introdução
+
+Nesta seção, apresentamos iniciativas que complementam o projeto e visam aprimorar a colaboração e a transparência entre os membros da equipe. Cada uma dessas iniciativas contribui para a organização e o acompanhamento do nosso progresso. A seguir, descrevemos cada uma delas:
 
 ## Cronograma
 
 O cronograma busca organizar o trabalho da equipe, dividida em um líder, três sublíderes e nove membros, para concluir a produção de diagramas UML dentro de um prazo de 19 dias, com entrega final em 29/11/2024. O plano foi estruturado em três sprints principais, cada uma com objetivos claros e etapas definidas para garantir uma execução eficiente e colaborativa.
+
 <div align="center">
   
-  ![Cronograma](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/refs/heads/main/docs/assets/Cronograma.jpg)
+![Cronograma](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/Cronograma.jpg)
 
   <font size="3"><p style="text-align: center"><b>Autor:</b> 
   <a href="https://github.com/Yvestxt">Yves Pimenta</a>
-  </p></font> 
 </div>
 
 ## Tabela de Equipes
@@ -20,11 +22,10 @@ Para garantir uma organização eficiente e promover uma melhor comunicação, a
 
 <div align="center">
   
-  ![Equipes](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/refs/heads/main/docs/assets/Equipes.jpg)
+![Equipes](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/Equipes.jpg)
 
   <font size="3"><p style="text-align: center"><b>Autor:</b> 
   <a href="https://github.com/Yvestxt">Yves Pimenta</a>
-  </p></font> 
 </div>
 
 Cada sublíder assumiu a responsabilidade de:
