--- a/docs/Modelagem/2.1.1.DiagramaDeClasses.md
+++ b/docs/Modelagem/2.1.1.DiagramaDeClasses.md
@@ -2,9 +2,17 @@
 
 ## Introdução
 
+Os diagramas de classes são fundamentais para a Engenharia de software por que eles nos audam a visualizar a estrutura estática de sistemas de software. Eles mostram as classes, seus atributos, métodos e os relacionamentos entre elas, sendo especialmente úteis no design de sistemas orientados a objetos. Esses diagramas são essenciais para conectar teoria e prática em Ciências da Computação. Para estudantes, ajudam a entender conceitos de abstração e design. Para profissionais, são indispensáveis para criar sistemas escaláveis e de qualidade. Em resumo, são uma peça-chave no desenvolvimento de sistemas complexos. Este documento descreve a modelagem UML estática para o projeto Tsírko, conforme especificado na entrega 2, focando no diagrama de classes, que é um diagrama UML estático. 
+
 ## Metodologia
 
+A partir dos requisitos levantados, os alunos Amanda, José Felipe, Rodrigo, Marcos Bittar e Yves elaboraram os primeiros protótipos e a partir deles foi feito um novo Diagrama feito por João Pedro, Vinícius Gabriel, Magno Luiz e Marcos Bittar em grupo. Foram utilizadas várias ferramentas para a elaboração dos diagramas entre eles o PlantUML, Draw.io e Lucidchart. 
+
+
+
 ## Diagramas de Classes
+
+
 
 ## Análise e Resultado
 
