--- a/docs/Modelagem/2.5.IniciativasExtras.md
+++ b/docs/Modelagem/2.5.IniciativasExtras.md
@@ -7,26 +7,20 @@ Nesta seção, apresentamos iniciativas que complementam o projeto e visam aprim
 ## Cronograma
 
 O cronograma busca organizar o trabalho da equipe, dividida em um líder, três sublíderes e nove membros, para concluir a produção de diagramas UML dentro de um prazo de 19 dias, com entrega final em 29/11/2024. O plano foi estruturado em três sprints principais, cada uma com objetivos claros e etapas definidas para garantir uma execução eficiente e colaborativa.
-
-<div align="center">
   
 ![Cronograma](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/Cronograma.jpg)
 
-  <font size="3"><p style="text-align: center"><b>Autor:</b> 
-  <a href="https://github.com/Yvestxt">Yves Pimenta</a>
-</div>
+<div align="center"><font size="3"><p style="text-align: center"><b>Autor:</b> 
+<a href="https://github.com/Yvestxt">Yves Pimenta</a></p></font></div>
 
 ## Tabela de Equipes
 
 Para garantir uma organização eficiente e promover uma melhor comunicação, a equipe foi estruturada em três subequipes, cada uma com um foco específico e liderada por um sublíder. Essa divisão permitiu uma abordagem mais direcionada para cada aspecto do projeto, promovendo maior colaboração entre os integrantes e facilitando o acompanhamento das atividades e contribuições.
-
-<div align="center">
   
 ![Equipes](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/Equipes.jpg)
 
-  <font size="3"><p style="text-align: center"><b>Autor:</b> 
-  <a href="https://github.com/Yvestxt">Yves Pimenta</a>
-</div>
+<div align="center"><font size="3"><p style="text-align: center"><b>Autor:</b> 
+<a href="https://github.com/Yvestxt">Yves Pimenta</a></p></font></div>
 
 Cada sublíder assumiu a responsabilidade de:
 
