Adiciona Introdução e Metodologia diagrama de atividades

--- a/docs/Modelagem/2.2.2.DiagramaDeAtividades.md
+++ b/docs/Modelagem/2.2.2.DiagramaDeAtividades.md
@@ -2,7 +2,13 @@
 
 ## Introdução
 
+O diagrama de atividades é uma ferramenta visual muito útil para entender e organizar processos. Ele é como um mapa que mostra o passo a passo de como algo acontece, seja no funcionamento de um sistema, na realização de uma tarefa ou na sequência de um processo. Usado principalmente na área de tecnologia e em projetos de software, ele ajuda a visualizar ações, decisões e até atividades que acontecem ao mesmo tempo. É ótimo para facilitar o planejamento e garantir que todos da equipe estejam na mesma página.
+
 ## Metodologia
+
+Para a realização desse artefato, foram considerados alguns critérios para a análise e desenvolvimento de cada diagrama de atividades presentes neste artefato, como requisitos elicitados e protótipo desenvolvidos neste projeto. Para e eloboração, foi levado em consideração a notação UML (Unified Modeling Language) é um padrão visual para modelar sistemas de software. Ela permite representar diferentes aspectos do desenvolvimento, como estrutura, comportamento e interações, ajudando na comunicação entre equipes e no planejamento do projeto.
+
+Algumas ferramentas de criação de diagrama UML foram utilizadas, como Draw.io e PlantUML. Cada diagrama de Atividades abaixo foi desenvolvido por parte dos membros, onde cada um desenvolveu suas ideias e pensamentos acerca do projeto, e desenvolveram um diagrama de atividades. Abaixo serão mostrados cada um deles e seus respectivos autores.
 
 ## Diagramas de Atividades
 
