--- a/docs/Modelagem/2.1.ModelagemEstatica.md
+++ b/docs/Modelagem/2.1.ModelagemEstatica.md
@@ -18,9 +18,13 @@ Este documento descreve a modelagem UML estática para o projeto Tsirko, conform
 ## Metodologia
 
 ## Diagrama de Classes
+<div align="center">
+<font size="3"><p style="text-align: center"><b>Figura 1:</b> Diagrama de Classes - Versão Final</p></font>
 
+![Diagrama de Classes](https://github.com/Bittarx/2024.2_G9_Tsirko_Entrega_02/blob/DiagramasEst%C3%A1ticos/docs/assets/classe.drawio.png)
 
-
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/joaopedrodasilvarodrigues">João Pedro</a>, <a href="https://github.com/Bittarx">Bittar</a>, <a href="https://github.com/vini051">Vinícius Gabriel</a>, <a href="https://github.com/magnluiz">Magno Luíz</a>, 2024.</p></font> 
+</div>
 
 ## Diagrama de Componentes
 
