--- a/docs/Modelagem/2.1.1.DiagramaDeClasses.md
+++ b/docs/Modelagem/2.1.1.DiagramaDeClasses.md
@@ -12,7 +12,17 @@ A partir dos requisitos levantados, os alunos Amanda, José Felipe, Rodrigo, Mar
 
 ## Diagramas de Classes
 
+### Legenda
+<p align="center" > <font><strong>Tabela 1:</strong> Legenda do diagrama de classes</font> <br></p>
 
+|Elemento|Nome|Função|
+|:--:|:--:|:--:|
+|img src="https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/classe.drawio.png" alt="Classes" width="100px">|Classe|Representa uma entidade no sistema, definindo um conjunto de atributos (propriedades) e métodos (comportamentos) que descrevem suas características e ações.|
+|<img src="https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/relacionamento.drawio.png" alt="Relacionamento" width="100px">|Relacionamento|Representa a conexão entre duas ou mais classes no diagrama, indicando como elas interagem ou dependem umas das outras.|
+|<img src="https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/composicao.drawio.png" alt="Composicao" width="100px">|Composição|Representa um relacinamento todo/parte onde a parte é essencial para o todo. Se o objeto "todo" for destruído, os objetos "parte" também são.| 
+|<img src="https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/heranca.drawio.png" alt="Heranca" width="100px">|Herança|Representa um relacionamento "é um" entre classes, onde uma classe filha (subclasse) herda atributos e métodos de uma classe pai (superclasse).| 
+
+<font size="3"><p style="text-align: center">Autor: [João Pedro](https://github.com/joaopedrodasilvarodrigues)</p></font>
 
 ## Análise e Resultado
 
