--- a/docs/Modelagem/2.2.ModelagemDinamica.md
+++ b/docs/Modelagem/2.2.ModelagemDinamica.md
@@ -36,7 +36,7 @@ Na **figura 1** é possível visualizar a versão final do diagrama.
 <div align="center">
 <font size="3"><p style="text-align: center"><b>Figura 1:</b><a href="https://drive.google.com/file/d/1ZXTpFUqGdWvsa-PCG4NBILEOMkdILgQw/view?usp=sharing"> Versão Final do Diagrama de Sequência</a></p></font>
 
-![Diagrama de Sequência](/docs/assets/VersaoFinal_DiagramaDeSequencia.png)
+![Diagrama de Sequência](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/refs/heads/main/docs/assets/VersaoFinal_DiagramaDeSequencia.png)
 
 <font size="3"><p style="text-align: center"><b>Autor:</b> 
 <a href="https://github.com/acamposs">Amanda Campos</a>, 
@@ -133,7 +133,7 @@ Na **figura 5** é possível visualizar a versão final do diagrama.
 <div align="center">
 <font size="3"><p style="text-align: center"><b>Figura 5:</b><a href="https://lucid.app/lucidchart/5f4b3733-dd85-44ec-90a7-46e42a58fdff/edit?invitationId=inv_cde7568f-3cee-4395-b4ed-8a921482c14a"> Versão Final do Diagrama de Estados</a></p></font>
 
-![Diagrama de Estados](docs\assets\VersaoFinal_DiagramaDeEstados.png)
+![Diagrama de Estados](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/refs/heads/main/docs/assets/VersaoFinal_DiagramaDeEstados.png)
 
 <font size="3"><p style="text-align: center"><b>Autor:</b> 
 <a href="https://github.com/acamposs">Amanda Campos</a>, 
