Adiciona artefato Diagrama de Atividades

--- a/docs/Modelagem/2.2.2.DiagramaDeAtividades.md
+++ b/docs/Modelagem/2.2.2.DiagramaDeAtividades.md
@@ -12,9 +12,49 @@ Algumas ferramentas de criação de diagrama UML foram utilizadas, como Draw.io 
 
 ## Diagramas de Atividades
 
+<div align="center">
+<font size="3"><p style="text-align: center"><b>Figura 1:</b> Diagrama de Atividades - Amanda Campos </p></font>
+
+![Diagrama de Atividades - Amanda Campos](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/refs/heads/main/docs/assets/Amanda_Campos_DiagramaDeAtividades.png)
+
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/acamposs">Amanda Campos</a>, 2024.</p></font> 
+</div>
+
+<div align="center">
+<font size="3"><p style="text-align: center"><b>Figura 2:</b> Diagrama de Atividades - Isaque Santos </p></font>
+
+![Diagrama de Atividades - Isaque Santos](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/refs/heads/main/docs/assets/Isaque_Santos_DiagramaAtividades.png)
+
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/IsaqueSH">Isaque Santos</a>, 2024.</p></font> 
+</div>
+
+<div align="center">
+<font size="3"><p style="text-align: center"><b>Figura 2:</b> Diagrama de Atividades - Marcos Bittar </p></font>
+
+![Diagrama de Atividades - Marcos Bittar](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/refs/heads/main/docs/assets/Bittar_DiagramaDeAtividades.png)
+
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/Bittarx">Marcos Bittar</a>, 2024.</p></font> 
+</div>
+
 ## Análise e Resultado
+
+Cada diagrama desenvolvido possui suas características e diversidades que, em maioria das vezes, acabam se completando ou trilando um mesmo caminho, abaixo será analisado cada um desses diagramas:
+
+### Amanda Campos
+
+- O diagrama de atividades foi basicamente dividido em 4 Unidades Organizacionais, onde cada uma contem fluxos e atividades específicas que atuam dentro do sistema. A lógica e estruturação desse diagrama foi de suma importância para o mapeamento e visualização do diagrama de atividades definitivo.
+
+### Isaque Santos
+
+- O diagrama mostra o fluxo de atividades relacionadas à arte circense, dividido em três partes principais: cadastrar espetáculos, inscrever-se em aulas e comprar ingressos. Tudo começa com o login, e cada processo segue passos claros, como preencher formulários, escolher locais ou tipos de ingressos, e finalizar pagamentos. No final, todos os caminhos levam à conclusão dos objetivos. Ele é bem organizado, mas poderia incluir mais detalhes sobre erros ou alternativas.
+
+### Marcos Bittar 
+
+- É um diagrama mais simples, mas que apresenta uma ideia que já estava sendo utilizada em partes nos outros dois diagramas, mas tem seu grau de importância para esse artefato.
+
 
 ## Histórico de Versão
 | Versão | Data       | Descrição                                      | Autor               | Revisor               |
 |--------|------------|------------------------------------------------|---------------------|-----------------------|
 | 1.0    | 23/11/2024 | Primeira versão do artefato | [Amanda Campos](https://github.com/acamposs) | [Autor](https://github.com/autor) |
+| 1.1   | 28/11/2024 | Criação do artefato Diagrama de Atividades | [Isaque Santos](https://github.com/IsaqueSH) | [Amanda Campos](https://github.com/acamposs), [Carlos Gabriel](https://github.com/TheCarlosRamos), [Rodrigo Bezerra](https://github.com/Rodrigomfab88)   |
