--- a/docs/Modelagem/2.1.1.DiagramaDeClasses.md
+++ b/docs/Modelagem/2.1.1.DiagramaDeClasses.md
@@ -10,8 +10,6 @@ A partir dos requisitos levantados, os alunos Amanda, José Felipe, Rodrigo, Mar
 
 
 
-## Diagramas de Classes
-
 ### Legenda
 <p align="center" > <font><strong>Tabela 1:</strong> Legenda do diagrama de classes</font> <br></p>
 
@@ -23,6 +21,47 @@ A partir dos requisitos levantados, os alunos Amanda, José Felipe, Rodrigo, Mar
 |<img src="https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/heranca.drawio.png" alt="Heranca" width="100px">|Herança|Representa um relacionamento "é um" entre classes, onde uma classe filha (subclasse) herda atributos e métodos de uma classe pai (superclasse).| 
 
 <font size="3"><p style="text-align: center">Autor: [João Pedro](https://github.com/joaopedrodasilvarodrigues)</p></font>
+
+
+## Diagramas de Classes
+
+<div align="center">
+<font size="3"><p style="text-align: center"><b>Figura 1:</b> Diagrama de Classes Amanda Alves Campos</p></font>
+
+![Figura1](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/Amanda_Campos_DiagramaDeClasses.png)
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/acamposs">Amanda Alves Campos</a></p></font> 
+</div>
+
+<div align="center">
+<font size="3"><p style="text-align: center"><b>Figura 1:</b> Diagrama de Classes José Filipe Brito Souza</p></font>
+
+![Figura1](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/Jose_Souza_Diagrama_de_Classes.png)
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/JoseFilipi">José Filipe Brito Souza</a></p></font> 
+</div>
+
+<div align="center">
+<font size="3"><p style="text-align: center"><b>Figura 1:</b> Diagrama de Classes Rodrigo Mattos de Figueiredo</p></font>
+
+![Figura1](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/Rodrigo_DiagramaDeClasses.png)
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/Rodrigomfab88">Rodrigo Mattos de Figueiredo</a></p></font> 
+</div>
+
+<div align="center">
+<font size="3"><p style="text-align: center"><b>Figura 1:</b> Diagrama de Classes Marcos Santos Bittar</p></font>
+
+![Figura1](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/Bittar_DiagramaDeClasses.png)
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/Bittarx">Marcos Santos Bittar</a></p></font> 
+</div>
+
+<div align="center">
+<font size="3"><p style="text-align: center"><b>Figura 1:</b> Diagrama de Classes Yves Gustavo Ribeiro Pimenta</p></font>
+
+![Figura1](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/Yves_Diagrama.png)
+<font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/Bittarx">Marcos Santos Bittar</a></p></font> 
+</div>
+
+
+
 
 ## Análise e Resultado
 
