--- a/docs/Modelagem/2.1.2.DiagramaDeComponentes.md
+++ b/docs/Modelagem/2.1.2.DiagramaDeComponentes.md
@@ -8,6 +8,20 @@ O diagrama de componentes é uma ferramenta essencial para representar a estrutu
 
 Para criar o diagrama de componentes do Tsírko, nós, [Gabriel](https://github.com/gabrielfreitass1), [João](https://github.com/joaopedrodasilvarodrigues), [Raphael](https://github.com/Raphides) e [Magno](https://github.com/magnluiz), analisamos os requisitos do projeto e a arquitetura proposta. Utilizando as ferramentas draw.io e PlantUML, identificamos os módulos fundamentais do sistema e suas interfaces. Representamos graficamente os componentes, estabelecendo suas relações e dependências. Por fim, cada um de nós fez sua própria versão do diagrama, para que fosse possível consolidar as ideias de todos na versão final.
 
+### Legenda
+
+<p align="center" > <font><strong>Tabela 1:</strong> Legenda do Diagrama de Componentes</font> <br></p>
+
+|                                               Elemento                                                |        Nome         |                                                        Função                                                        |
+| :---------------------------------------------------------------------------------------------------: | :-----------------: | :------------------------------------------------------------------------------------------------------------------: |
+|             <img src="../assets/componentecomponente.png" alt="Componente" width="100px">             |     Componente      |                               Unidade modular do sistema com interfaces bem definidas.                               |
+|              <img src="../assets/componenteporta.drawio.png" alt="Porta" width="100px">               |        Porta        | Um ponto de interação definido na borda de um componente, onde o componente pode interagir com seu ambiente externo. |
+|        <img src="../assets/componentedependencia.drawio.png" alt="Dependência" width="100px">         |     Dependência     |                     Relação onde um componente depende de outro para seu funcionamento completo                      |
+| <img src="../assets/componenteinterfacerequerida.drawio.png" alt="Interface Requerida" width="100px"> | Interface Requerida |                          Indica que o componente necessita dessa interface para funcionar.                           |
+| <img src="../assets/componenteinterfacefornecida.drawio.png" alt="Interface Fornecida" width="100px"> | Interface Fornecida |           Indica que o componente implementa e fornece essa interface para outros componentes utilizarem.            |
+
+---
+
 ## Diagramas de Componentes
 
 <div align="center">
@@ -24,7 +38,7 @@ Para criar o diagrama de componentes do Tsírko, nós, [Gabriel](https://github.
 <div align="center">
 <font size="3"><p style="text-align: center"><b>Figura 2:</b>  Diagrama de Componente - João Pedro </p></font>
 
-![ Diagrama de Componente - João Pedro](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/Joao_Pedro_DiagramaDeComponentes_Revisado.png)
+![ Diagrama de Componente - João Pedro](https://raw.githubusercontent.com/UnBArqDsw2024-2/2024.2_G9_Tsirko_Entrega_02/main/docs/assets/Joao_Pedro_Diagrama_De_Componentes_Revisado2.png)
 
 <font size="3"><p style="text-align: center"><b>Autor:</b> <a href="https://github.com/joaopedrodasilvarodrigues">João Pedro</a>, 2024.</p></font>
 
@@ -54,7 +68,7 @@ Para criar o diagrama de componentes do Tsírko, nós, [Gabriel](https://github.
 
 ## Análise e Resultado
 
-A análise dos diagramas de componentes apresentados revela a estrutura arquitetural do sistema Tsírko, demonstrando como os diferentes módulos se organizam e se relacionam. Os diagramas mostram uma separação clara de responsabilidades e interfaces de comunicação entre os componentes.
+A análise dos diagramas de componentes apresentados revela a estrutura arquitetural do sistema Tsírko, demonstrando uma separação clara de responsabilidades e interfaces de comunicação entre os componentes.
 
 O diagrama do [Magno](https://github.com/magnluiz) ilustra uma arquitetura em camadas, onde o Frontend comunica com o Backend através de interfaces bem definidas. O Frontend é composto por nove componentes UI distintos, cada um com uma responsabilidade específica, desde votação até venda de ingressos. O Backend oferece cinco serviços principais que gerenciam dados, notificações, mapas, agenda e pagamentos, todos conectados a um banco de dados estruturado.
 
@@ -79,6 +93,7 @@ O diagrama do [Raphael](https://github.com/Raphides) apresenta uma estrutura foc
 
 ## Histórico de Versão
 
-| Versão | Data       | Descrição                   | Autor                                        | Revisor                           |
-| ------ | ---------- | --------------------------- | -------------------------------------------- | --------------------------------- |
-| 1.0    | 28/11/2024 | Primeira versão do artefato | [Vinícius Brito](https://github.com/vini051) | [Autor](https://github.com/autor) |
+| Versão | Data       | Descrição                 | Autor                                                                                                                                                                              | Revisor                                              |
+| ------ | ---------- | ------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------- |
+| 2.0    | 28/11/2024 | Diagramas de Componentes  | [Raphael](https://github.com/Raphides), [João](https://github.com/joaopedrodasilvarodrigues), [Gabriel](https://github.com/gabrielfreitass1), [Magno](https://github.com/magnluiz) | [Yves](https://github.com/yvestxt)                   |
+| 1.0    | 28/11/2024 | Primeira versão da página | [Vinícius Brito](https://github.com/vini051)                                                                                                                                       | [João](https://github.com/joaopedrodasilvarodrigues) |
